test/typeerrors/Examples/ExprNormalApplication.hs
module ExprNormalApplication where

f = "geit" "gans"
